--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://fonts.googleapis.com/css?family=Lato:300,400,900);/*!
+@import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i,900,900i);/*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
@@ -10466,6 +10466,10 @@ a.text-dark:focus {
   }
 }
 
+body {
+  background: #fff;
+}
+
 .navbar-laravel {
   background-color: #fff;
   -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
@@ -10496,5 +10500,10 @@ a.text-dark:focus {
 
 #accordionSidebar .card-header {
   padding: unset;
+}
+
+.note-editable b,
+.note-editable strong {
+  font-weight: bold;
 }
 
