--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,7 +1,7 @@
 
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,900');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i,900,900i');
 
 // Variables
 @import 'variables';
@@ -9,7 +9,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-
+body{
+  background: #fff;
+}
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
@@ -32,3 +34,6 @@
 #accordionSidebar .card-header{
   padding: unset;
 }
+
+//summernote
+.note-editable b, .note-editable strong { font-weight: bold; }
